--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=6a777a3806b4a8f79984",
+    "/css/app.css": "/css/app.css?id=4f25e97b4943f3919060"
 }
