--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "vue-codemirror": "^4.0.6",
         "vue-router": "^3.3.2",
         "vue-verification-code-input": "^1.0.0",
+        "vue2-highcharts": "^1.2.5",
         "vuedraggable": "^2.24.3"
     }
 }
