npm run prod version

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=b233afae29b1475c78c0",
+    "/css/app.css": "/css/app.css?id=4f25e97b4943f3919060"
 }
