--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/passport": "^9.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
+        "spatie/laravel-permission": "^5.4",
         "staudenmeir/eloquent-has-many-deep": "1.12"
     },
     "require-dev": {
